bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: value =< is not a member of Int
  return (100-Math.abs(n)=<10) || (200-Math.abs(n)=<10)
                         ^NearHundred:2: error: value =< is not a member of Int
  return (100-Math.abs(n)=<10) || (200-Math.abs(n)=<10)
                                                  ^